# sparse

./: .gitattributes  .gitignore  ACQUISITION_PITCH.md  Cargo.toml  DELIVERABLES_CHECKLIST.md  GITHUB_SETUP.md  LICENSE  NEW_FEATURES_SUMMARY.md  README.md  REFOCUS_SUMMARY.md  pyproject.toml  requirements-api.txt  requirements-eval.txt  requirements.txt
.cargo/: config.toml
.github/workflows/: build-artifacts.yml  deploy-hf-space.yml
archive/: 10X_ROADMAP.md  EXPERIMENT_LOG.md  STRATEGY_V2_10X.md  TENPAK_10X.md  TENPAK_X.md  calibration_gpt2.json  calibration_qwen7b.json
archive/removed_features/: README.md
archive/removed_features/artifact/: __init__.py  http_streaming.py  streaming.py
archive/removed_features/deploy/: __init__.py  backends.py
archive/removed_features/inference/: vllm_integration.py
archive/removed_features/studio/: __init__.py  storage.py
archive/results/: eval_TinyLlama_TinyLlama-1.1B-Chat-v1.0_int4_residual_v1_mlp.json  eval_TinyLlama_TinyLlama-1.1B-Chat-v1.0_pocketllm_v2_mlp.json  eval_TinyLlama_TinyLlama-1.1B-Chat-v1.0_tenpak_x_v1_mlp.json  eval_gpt2_pocketllm_v1_mlp.json  eval_gpt2_pocketllm_v2_mlp.json  eval_gpt2_tenpak_x_v1_mlp.json  eval_gpt2_tenpak_x_v2_mlp.json
archive/scripts/: calibrate_aqlm.py  calibrate_fast.py  calibrate_heuristic.py  calibrate_simple.py  calibrate_tenpak10x.py  eval_7b_hf.py  eval_calibrated.py  eval_calibrated_streaming.py  eval_codec.py  tenpak_x.py
artifact/: format.py  signing.py
benchmarks/: BENCHMARK_RESULTS.md  DELTA_COMPRESSION_VALIDATION.md  RUST_MIGRATION.md  bench_rust_vs_python.py  run_benchmarks.sh
cli/: __init__.py  main.py
core/: __init__.py  allocation.py  calibration.py  codecs.py  delta.py  delta_rust.py  fast_reconstruct.py  quantization.py
cuda/: Makefile  awq_gemm.cu  tenpak_cuda.py
docs/: 10x_compression_plan.md  10x_compression_plan_archive.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  INTEGRATION_GUIDE.md  ROADMAP.md  TECHNICAL_OVERVIEW.md  awq_implementation.md  compression_results.md  g8_codec.md  sparse_codec_plan.md
examples/: README.md  dataset_delta_example.py  delta_compression.py  optimize_cost.py  quantize_and_serve.py  simple_bundle.json
hf_space/: .dockerignore  .gitignore  .space.yaml  COMPRESSION_RESULTS.md  Dockerfile  README.md  app.py  app_10x.py  app_old.py  app_rust.py  app_simple.py  build_deploy.sh  packages.txt  pyproject.toml  requirements.txt  setup.sh  tenpak
hf_space/core/: __init__.py  allocation.py  calibration.py  dataset_delta.py  delta.py  quantization.py
hf_space/optimizer/: benchmark.py  routing.py
hf_space/rust/: .gitignore  Cargo.toml  README.md  pyproject.toml
hf_space/rust/src/: lib.rs  quantize.rs
optimizer/: __init__.py  benchmark.py  candidates.py  routing.py  selector.py
rust/: build.sh  pyproject.toml
rust/src/: decompress.rs  lib.rs  utils.rs
scripts/: benchmark_inference.py  calibrate.py  calibrated_quant.py  demo_deploy_cpu.py  download_demo_models.sh  eval_calibrated.py  eval_codecs.py  eval_g8.py  eval_llama.py  eval_llama_streaming.py  eval_nf3.py  eval_pq.py  eval_rust_codecs.py  gptq_calibrate.py  install_python.sh  install_release.sh  package.sh  run_eval.py  run_eval_and_update_readme.py  run_full_eval.sh  test_all_features.py  test_ci.py  test_int8_quality_7b.py  thorough_eval.py  validate_compression.py
scripts/archive/: combined_approach.py  eval_10x_compression.py  eval_advanced_quant.py  eval_best_combo.py  eval_calibrated_quant.py  eval_full_model_quant.py  eval_g8_accurate.py  eval_g8_optimized.py  eval_g8_v2.py  eval_hybrid_fast.py  eval_hybrid_quant.py  eval_int3_mixed.py  eval_kquant.py  eval_llama_quick.py  eval_llama_v2.py  eval_mixed_precision.py  eval_moonshot_quant.py  eval_outlier_quant.py  eval_pq_fast.py  eval_sparse_quant.py  fast_gptq.py  full_gptq.py  knowledge_distillation.py  novel_compression.py  optimal_quant.py  outlier_quant.py  push_10x.py  push_10x_calibrated.py  qat_lite.py  quick_10x_test.py  quick_compression_test.py  smoothquant.py  test_advanced_quant.py  test_learned_levels.py  test_residual_quant.py  test_sparse_quant.py  tune_llama_quant.py  tune_quant_fast.py
src/: compress.rs  compression.rs  decompress.rs  delta_compute.rs  gpu.rs  lib.rs  main.rs  quantize.rs  reconstruct.rs  streaming.rs  wgpu_gemm.rs
studio/: api.py  jobs.py  storage.py
tests/: README.md  conftest.py  test_artifact_format.py  test_ci.py  test_dataset_delta.py  test_delta_7b_local.py  test_delta_cache.py  test_delta_compression.py  test_e2e_delta_compression.py  test_e2e_fast_reconstruct.py  test_gpu_integration.py  test_http_streaming.py  test_individual_features.py  test_int8_quality_gpt2.py  test_optimizer.py  test_quantization.py  test_real_models.py  test_routing.py  test_rust_integration.py  test_vllm_integration.py
