[package]
name = "tenpak"
version = "0.1.0"
edition = "2021"

[lib]
name = "tenpak"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "tenpak"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
bincode = "1.3"
rayon = "1.10"  # Parallel CPU compression

# Optional wgpu support for cross-platform GPU inference
wgpu = { version = "23", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
pollster = { version = "0.3", optional = true }

[features]
default = []
gpu = ["wgpu", "bytemuck", "tokio", "pollster"]
# Calibration-based quantization for 7-10x compression with <1% PPL delta
# Enables AWQ-style importance-weighted quantization
calibration = []

[profile.ci-release]
inherits = "release"
lto = "thin"
codegen-units = 16
