[package]
name = "sparse-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sparse_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py39"] }
numpy = "0.20"
ndarray = "0.15"
rayon = "1.8"
byteorder = "1.5"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"
half = "2.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
