[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenpak"
version = "0.2.0"
description = "Delta compression for LLM fine-tunes + cross-tool cost optimizer for model hubs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "TenPak Team"}
]
keywords = ["llm", "delta-compression", "model-optimization", "fine-tuning", "model-hub"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]
all = ["tenpak[dev]"]

[project.scripts]
tenpak = "cli.main:main"

[project.urls]
Homepage = "https://github.com/gagansuie/tenpak"
Documentation = "https://github.com/gagansuie/tenpak#readme"
Repository = "https://github.com/gagansuie/tenpak"

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "core.*", "cli", "cli.*", "optimizer", "optimizer.*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
