[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sparse-llm"
version = "0.1.2"
description = "Delta compression for LLM fine-tunes - lossless or LoRA-equivalent SVD compression"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Gagan Suie", email = "singhga029@gmail.com"}
]
keywords = ["llm", "delta-compression", "model-optimization", "fine-tuning", "lora", "svd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[project.scripts]
sparse = "cli.main:main"

[project.urls]
Homepage = "https://github.com/gagansuie/sparse"
Documentation = "https://github.com/gagansuie/sparse#readme"
Repository = "https://github.com/gagansuie/sparse"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "sparse_core"
python-packages = ["core", "cli"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
